--- a/index.html
+++ b/index.html
@@ -97,14 +97,16 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<h2><a href="https://github.com/zulfikar03/mobile-phone-recommendation-system">Smartphone Recommendation System<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/zulfikar03/mobile-phone-recommendation-system" class="image fit"><img src="images/smartphones.png" alt="" /></a>
+									<p>Developed a content-based filtering system to provide personalized smartphone recommendations. 
+										The project leverages text similarity to match user preferences with product descriptions.
+										 We employed two key feature extraction techniques—TF-IDF and BERT embeddings—to represent textual data. 
+										 The model then uses cosine similarity to rank and present the top 10 most relevant smartphones.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/zulfikar03/mobile-phone-recommendation-system" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
