add project vehicle tracking

--- a/index.html
+++ b/index.html
@@ -111,14 +111,15 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<h2><a href="https://github.com/zulfikar03/widya-vehicle-count">Toll Gate Vehicle Tracking and Counting<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/zulfikar03/widya-vehicle-count" class="image fit"><img src="images/toll_gates.png" alt="" /></a>
+									<p>This project implemented a system for vehicle detection and tracking in a video for toll gate monitoring. 
+										The solution was developed using YOLOv5 with PyTorch for initial vehicle object detection. Subsequently, the DEEP SORT model was leveraged to provide continuous vehicle tracking. 
+										This integrated system is capable of accurately counting vehicles passing through the gate and classifying them into specific categories, including buses, trucks, and cars.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/zulfikar03/widya-vehicle-count" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
