--- a/index.html
+++ b/index.html
@@ -124,26 +124,28 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
+										<h2><a href="https://github.com/zulfikar03/analysis-e-commerce-data">Analysis Brazil E-Commerce Dataset<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/zulfikar03/analysis-e-commerce-data" class="image fit"><img src="images/e-commerce.png" alt="" /></a>
+									<p>This project is a comprehensive e-commerce data analysis, starting with data cleaning and exploratory data analysis (EDA) in a Jupyter Notebook. Following that, I built an interactive dashboard using Python and Streamlit to visualize key business metrics. 
+										The project provides deep insights into sales trends, product performance, and customer behavior.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/zulfikar03/analysis-e-commerce-data" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
+										<h2><a href="https://medium.com/@zulfikarirham02/telco-customer-churn-prediction-using-machine-learning-and-deep-learning-8d1905b04980">Telco Customer Churn Prediction<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://medium.com/@zulfikarirham02/telco-customer-churn-prediction-using-machine-learning-and-deep-learning-8d1905b04980" class="image fit"><img src="images/telcom.jpg" alt="" /></a>
+									<p>Developed a customer churn prediction model to help telecommunications companies proactively identify at-risk customers. 
+										The project involved a comprehensive data analysis of various factors, including customer demographics, account details, and service usage. 
+										We benchmarked the performance of several models—including deep learning algorithms and traditional machine learning techniques like KNN and Logistic Regression—to identify the most effective solution for accurate churn prediction.
+									</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://medium.com/@zulfikarirham02/telco-customer-churn-prediction-using-machine-learning-and-deep-learning-8d1905b04980" class="button">View Project</a></li>
 									</ul>
 								</article>
 							</section>
